# ballista-proto

./: README.md
java/ballista-proto/: README.md  build.gradle.kts
rust/ballista-proto/: .gitignore  Cargo.toml  build.rs
rust/ballista-proto/proto/: ballista.proto
rust/ballista-proto/src/: lib.rs  to_protobuf.rs
