[package]
name = "ballista-proto"
description = "Ballista Protocol Buffer Definitions"
license = "Apache-2.0"
version = "0.1.0"
homepage = "https://github.com/ballista-compute/ballista-proto"
repository = "https://github.com/ballista-compute/ballista-proto"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"
build = "build.rs"
include = ["build.rs", "src/**/*", "Cargo.toml", "proto/ballista.proto"]

[dependencies]
prost = "0.6"
prost-types = "0.6"

arrow = { git = "https://github.com/andygrove/arrow", branch="expose-table-provider-data" }
datafusion = { git = "https://github.com/andygrove/arrow", branch="expose-table-provider-data" }

[build-dependencies]
prost-build = { version = "0.6.1" }